# LookSmart

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
looksmart/: __init__.py  audit.py  cli.py  config.py  engagement.py  llm_protocol.py  localllm.py  metrics.py  models.py  orchestrator.py  scheduler.py
looksmart/cookoo/: __init__.py  filter.py  injector.py  store.py
looksmart/echo/: __init__.py  aggregate.py  correlate.py  importers.py  store.py  tagging.py
looksmart/generation/: __init__.py  base.py  cohort.py  curation.py  fence.py  health.py  identity.py  plain.py  politic.py  registry.py  religious.py  spectrum.py  spelunking.py  weird_al.py
looksmart/persona/: __init__.py  library.py  sampler.py
looksmart/providers/: __init__.py  anthropic.py  base.py  gemini.py  grok.py  openai.py  registry.py
tests/: test_cookoo.py  test_echo.py  test_engagement.py  test_generation.py  test_metrics.py  test_orchestrator.py  test_persona.py  test_providers.py  test_scheduler.py
