[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "looksmart"
version = "0.1.0"
description = "Knowledge-work infrastructure with incidental privacy properties."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
looksmart = "looksmart.cli:main"

[tool.setuptools.packages.find]
include = ["looksmart*"]

[tool.setuptools.package-data]
"looksmart.persona" = ["library/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
